# litellm-docs

./: .firebaserc  .gitignore  Makefile  README.md  docusaurus.config.js  firebase.json  package-lock.json  package.json  sidebars.js
blog/: authors.yml
blog/agent_shin_triage/: index.md
blog/litellm_rust_launch/benchmark/: Cargo.toml  README.md  llm_app.py
docs/: a2a.md  a2a_agent_card.md  a2a_agent_headers.md  a2a_agent_permissions.md  a2a_cost_tracking.md  a2a_invoking_agents.md  a2a_iteration_budgets.md  adaptive_router.md  aiohttp_benchmarks.md  anthropic_count_tokens.md  apply_guardrail.md  assistants.md  audio_transcription.md  auth_overview.md  batches.md  bedrock_converse.md  bedrock_invoke.md  benchmarks.md  claude_code_compatibility.md  claude_code_context_management.md  contact.md  container_files.md  containers.md  contributing.md  count_tokens.md  data_security.md  default_code_snippet.md  deprecations.md  enterprise.md  evals_api.md  exception_mapping.md  files_endpoints.md  fine_tuning.md  generateContent.md  image_edits.md  image_generation.md  image_variations.md  index.md  interactions.md  load_test.md  (+59 more)
i18n/: translation-manifest.zh-tw.json
okf/: architecture.md  content-map.md  development.md  format.md  index.md  overview.md  repository-files.md  repository-inventory.md
presentations/: duotify-slide-template.css  litellm-open-source-solution.md
release_notes/: index.md
scripts/: generate-okf.mjs  translate-zh-tw.mjs  validate-okf.mjs
versioning/: README.md  STATUS.md  fill_missing_images.py  generate_versions.sh  graceful-fs-preload.js
(+1951 files in other folders)
