[package]
name = "litellm_rust_bench"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "bench"
path = "main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
